<resources>
    <string name="app_name">监控终端</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="action_settings">设置</string>
    <string name="action_record_start">开启本地保存</string>
    <string name="action_record_stop">关闭本地保存</string>

    <string name="prompt_account">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_forget_password">无法登录?</string>
    <string name="action_sign_up">注册</string>
    <string name="error_invalid_account">请输入用户名</string>
    <string name="error_invalid_password">请输入密码</string>
    <string name="error_invalid_null">该用户尚未注册!</string>

    <string name="page_title_scan_device">扫描设备</string>
    <string name="page_title_track">轨迹路线</string>

    <string name="no_devices_all">未发现设备</string>
    <string name="scan_device_active">请下拉刷新或点击右下角按钮扫描设备</string>

    <string name="text_hint_track_content">请输入轨迹内容</string>
    <string name="text_container_no">"箱号 "</string>
    <string name="menu_clear">关闭</string>
    <string name="menu_toggle_icon">触发</string>
    <string name="menu_icon_type">种类</string>

    <string name="action_type_0">门封报警</string>
    <string name="action_type_1">温度报警</string>
    <string name="action_type_2">湿度报警</string>
    <string name="action_type_3">振动报警</string>

    <string name="error_ble_not_supported">该设备不支持蓝牙BLE功能</string>
    <string name="device_connecting">正在连接中...</string>
    <string name="success_device_connection">连接成功</string>
    <string name="success_device_reconnection">重新连接成功</string>
    <string name="fail_device_connection">连接失败</string>
    <string name="time_out_device_connection">连接超时</string>
    <string name="success_device_send_data">发送成功</string>
    <string name="fail_device_send_data_overlength">发送失败,发送内容超过字数限制</string>
    <string name="notify_no_history_data">无历史事件</string>
    <string name="fail_device_send_data">发送失败</string>
    <string name="device_reply_query_title">设备状态信息</string>
    <string name="device_reply_extra_query_title">设备状态信息</string>
    <string name="device_alarm_title">警告</string>
    <string name="device_reply_query_period">上传周期</string>
    <string name="device_reply_safe_0">未上封</string>
    <string name="device_reply_safe_1">已上封</string>
    <string name="device_reply_safe_2">已拆封</string>
    <string name="device_reply_lock">关闭</string>
    <string name="device_reply_unlock">打开</string>
    <string name="device_reply_info_title">设备位置信息</string>
    <string name="device_reply_info_time_error">时间未知</string>
    <string name="text_ok">确认</string>

    <string name="card_title_setting">配置</string>
    <string name="card_title_lock">上封</string>
    <string name="card_title_unlock">解封</string>
    <string name="card_title_query_status">状态查询</string>
    <string name="card_title_query_info">位置查询</string>

    <string name="text_hint_current_time">当前时间</string>
    <string name="text_hint_temperature">温度(˚C)</string>
    <string name="text_hint_humidity">湿度(%RH)</string>
    <string name="text_hint_locked">门封状态</string>
    <string name="text_hint_shake_x">振动X轴</string>
    <string name="text_hint_shake_y">振动Y轴</string>
    <string name="text_hint_shake_z">振动Z轴</string>
    <string name="text_hint_sms_message">接收信息</string>
    <string name="text_hint_sms_edit_message">发送信息</string>

</resources>
